infra/k8s/overlays/aks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mcpserver
  namespace: mcp-apis
spec:
  replicas: 3
  template:
    spec:
      containers:
        - name: mcpserver
          image: mcpserver
          imagePullPolicy: IfNotPresent
