infra/k8s/overlays/aks/delete-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mcpserver-ingress
  namespace: mcp-apis
$patch: delete
